--- a/experiment.html
+++ b/experiment.html
@@ -6,7 +6,7 @@
 	var page = new Array(howMany+1);
 
 	page[0]="https://script.google.com/macros/s/AKfycbxy5bLqCtihv-8H4ZR3PyePjJOnURBNoADKo6lRwJjQ6kg1S7TC/exec";
-	page[1]="https://gustavopaetzold.wordpress.com/";
+	page[1]="https://script.google.com/macros/s/AKfycbxy5bLqCtihv-8H4ZR3PyePjJOnURBNoADKo6lRwJjQ6kg1S7TC/exec";
 
 	function rndnumber(){
 		var randscript = -1;
