--- a/experiment.html
+++ b/experiment.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
 	<script language="JavaScript">
-	var howMany = 1;
+	var howMany = 0;
 	var page = new Array(howMany+1);
 
 	page[0]="https://script.google.com/macros/s/AKfycbxl1nbx2WapPrDM2y-IgwBTSD08dst2pMRTmMPhdt6sGKAcrKE/exec";
-	page[1]="https://script.google.com/macros/s/AKfycbzzqTi5iz5F_hnEjbPlIpnhJ7Dipgm7XVKrRmWYK6_bddRoQHA/exec";
+	<!--page[1]="https://script.google.com/macros/s/AKfycbzzqTi5iz5F_hnEjbPlIpnhJ7Dipgm7XVKrRmWYK6_bddRoQHA/exec";-->
 	<!--page[3]="https://script.google.com/macros/s/AKfycbymSpLb5zEwv6O6uXid4qoJzNkFpBb1mCIpcnlmgJ_xQsrszXg/exec";-->
 
 	function rndnumber(){
