--- a/experiment.html
+++ b/experiment.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<script language="JavaScript">
-	var howMany = 0;
-	var page = new Array(howMany+1);
+	<!--<script language="JavaScript">
+	<!--var howMany = 0;
+	<!--var page = new Array(howMany+1);
 
-	page[0]="https://script.google.com/macros/s/AKfycbxl1nbx2WapPrDM2y-IgwBTSD08dst2pMRTmMPhdt6sGKAcrKE/exec";
+	<!--page[0]="https://script.google.com/macros/s/AKfycbxl1nbx2WapPrDM2y-IgwBTSD08dst2pMRTmMPhdt6sGKAcrKE/exec";
 	<!--page[1]="https://script.google.com/macros/s/AKfycbzzqTi5iz5F_hnEjbPlIpnhJ7Dipgm7XVKrRmWYK6_bddRoQHA/exec";-->
 	<!--page[3]="https://script.google.com/macros/s/AKfycbymSpLb5zEwv6O6uXid4qoJzNkFpBb1mCIpcnlmgJ_xQsrszXg/exec";-->
 
-	function rndnumber(){
-		var randscript = -1;
-		while (randscript < 0 || randscript > howMany || isNaN(randscript)){
-			randscript = parseInt(Math.random()*(howMany+1));
-		}
-		return randscript;
-	}
-	quo = rndnumber();
-	quox = page[quo];
-	window.location=(quox);
-	</script>
-	<!--<meta http-equiv="refresh" content="0; URL=https://script.google.com/macros/s/AKfycbxy5bLqCtihv-8H4ZR3PyePjJOnURBNoADKo6lRwJjQ6kg1S7TC/exec">  -->
+	<!--function rndnumber(){
+	<!--	var randscript = -1;
+	<!--	while (randscript < 0 || randscript > howMany || isNaN(randscript)){
+	<!--		randscript = parseInt(Math.random()*(howMany+1));
+	<!--	}
+	<!--	return randscript;
+	<!--}
+	<!--quo = rndnumber();
+	<!--quox = page[quo];
+	<!--window.location=(quox);
+	<!--</script>-->
+	<meta http-equiv="refresh" content="0; URL=https://script.google.com/macros/s/AKfycbxl1nbx2WapPrDM2y-IgwBTSD08dst2pMRTmMPhdt6sGKAcrKE/exec">
 </head>
 <body />
 </html>
