Updated license page

--- a/subimdb/index.html
+++ b/subimdb/index.html
@@ -126,7 +126,7 @@
 			   <ul>
 				  <li><a id="aboutbt" onclick="paintHTML('about.html')">About</a></li>
 				  <li><a id="downloadbt" onclick="paintHTML('download.html')">Download</a></li>
-				  <li><a id="licensebt" onclick="paintHTML('http://www.opensubtitles.org/en/disclaimer')">License</a></li>
+				  <li><a id="licensebt" onclick="paintHTML('license.html')">License</a></li>
 				  <li><a id="contactbt" onclick="paintHTML('contact.html')">Contact</a></li>
 			   </ul>
 			</div>
