Added cite page

--- a/subimdb/index.html
+++ b/subimdb/index.html
@@ -64,7 +64,7 @@
 			#aboutbt {
 			   display:block;
 			   margin:0 0 0 0px;
-			   padding:6px 88px;
+			   padding:6px 66px;
 			   background:#ffffff;
 			   color:#000000;
 			   text-decoration:none;
@@ -73,7 +73,7 @@
 			#downloadbt {
 			   display:block;
 			   margin:0 0 0 1px;
-			   padding:6px 88px;
+			   padding:6px 66px;
 			   background:#ffffff;
 			   color:#000000;
 			   text-decoration:none;
@@ -82,7 +82,16 @@
 			#licensebt {
 			   display:block;
 			   margin:0 0 0 1px;
-			   padding:6px 88px;
+			   padding:6px 66px;
+			   background:#ffffff;
+			   color:#000000;
+			   text-decoration:none;
+			   line-height:1.8em;
+			}
+			#citebt {
+			   display:block;
+			   margin:0 0 0 1px;
+			   padding:6px 66px;
 			   background:#ffffff;
 			   color:#000000;
 			   text-decoration:none;
@@ -91,7 +100,7 @@
 			#contactbt {
 			   display:block;
 			   margin:0 0 0 1px;
-			   padding:6px 88px;
+			   padding:6px 66px;
 			   background:#ffffff;
 			   color:#000000;
 			   text-decoration:none;
@@ -127,6 +136,7 @@
 				  <li><a id="aboutbt" onclick="paintHTML('about.html')">About</a></li>
 				  <li><a id="downloadbt" onclick="paintHTML('download.html')">Download</a></li>
 				  <li><a id="licensebt" onclick="paintHTML('license.html')">License</a></li>
+				  <li><a id="citebt" onclick="paintHTML('cite.html')">Cite</a></li>
 				  <li><a id="contactbt" onclick="paintHTML('contact.html')">Contact</a></li>
 			   </ul>
 			</div>
