Updated download page

--- a/subimdb/download.html
+++ b/subimdb/download.html
@@ -6,11 +6,17 @@
 				<td valign="top" width="350px">
 					<br><b>SubIMDB:</b> Individual Subtitles</br>
 					<ul>
+						<li><a target="_blank" href="http://www.quest.dcs.shef.ac.uk/subimdb/SubIMDB_Children_Movies_Individual.tar.gz">Movies for Children<a></li>
+						<li><a target="_blank" href="http://www.quest.dcs.shef.ac.uk/subimdb/SubIMDB_Children_Series_Individual.tar.gz">Series for Children<a></li>
 						<li><a target="_blank" href="http://www.quest.dcs.shef.ac.uk/subimdb/SubIMDB_Children_Individual.tar.gz">Movies and Series for Children<a></li>
 						<li><a target="_blank" href="http://www.quest.dcs.shef.ac.uk/subimdb/SubIMDB_Family_Movies_Individual.tar.gz">Family Movies<a></li>
 						<li><a target="_blank" href="http://www.quest.dcs.shef.ac.uk/subimdb/SubIMDB_Family_Series_Individual.tar.gz">Family Series<a></li>
+						<li><a target="_blank" href="http://www.quest.dcs.shef.ac.uk/subimdb/SubIMDB_Family_Individual.tar.gz">Family Movies and Series<a></li>
 						<li><a target="_blank" href="http://www.quest.dcs.shef.ac.uk/subimdb/SubIMDB_Comedy_Movies_Individual.tar.gz">Comedy Movies<a></li>
 						<li><a target="_blank" href="http://www.quest.dcs.shef.ac.uk/subimdb/SubIMDB_Comedy_Series_Individual.tar.gz">Comedy Series<a></li>
+						<li><a target="_blank" href="http://www.quest.dcs.shef.ac.uk/subimdb/SubIMDB_Comedy_Individual.tar.gz">Comedy Movies and Series<a></li>
+						<li><a target="_blank" href="http://www.quest.dcs.shef.ac.uk/subimdb/SubIMDB_Movies_Individual.tar.gz">Movies<a></li>
+						<li><a target="_blank" href="http://www.quest.dcs.shef.ac.uk/subimdb/SubIMDB_Series_Individual.tar.gz">Series<a></li>
 						<li><a target="_blank" href="http://www.quest.dcs.shef.ac.uk/subimdb/SubIMDB_All_Individual.tar.gz">All<a></li>
 					</ul>
 					</ul>
@@ -18,11 +24,17 @@
 				<td valign="top">
 					<br><b>SubIMDB:</b> Compiled Corpus</br>
 					<ul>
+						<li><a target="_blank" href="http://www.quest.dcs.shef.ac.uk/subimdb/SubIMDB_Children_Movies_Compiled.tar.gz">Movies for Children<a></li>
+						<li><a target="_blank" href="http://www.quest.dcs.shef.ac.uk/subimdb/SubIMDB_Children_Series_Compiled.tar.gz">Series for Children<a></li>
 						<li><a target="_blank" href="http://www.quest.dcs.shef.ac.uk/subimdb/SubIMDB_Children_Compiled.tar.gz">Movies and Series for Children<a></li>
 						<li><a target="_blank" href="http://www.quest.dcs.shef.ac.uk/subimdb/SubIMDB_Family_Movies_Compiled.tar.gz">Family Movies<a></li>
 						<li><a target="_blank" href="http://www.quest.dcs.shef.ac.uk/subimdb/SubIMDB_Family_Series_Compiled.tar.gz">Family Series<a></li>
+						<li><a target="_blank" href="http://www.quest.dcs.shef.ac.uk/subimdb/SubIMDB_Family_Compiled.tar.gz">Family Movies and Series<a></li>
 						<li><a target="_blank" href="http://www.quest.dcs.shef.ac.uk/subimdb/SubIMDB_Comedy_Movies_Compiled.tar.gz">Comedy Movies<a></li>
 						<li><a target="_blank" href="http://www.quest.dcs.shef.ac.uk/subimdb/SubIMDB_Comedy_Series_Compiled.tar.gz">Comedy Series<a></li>
+						<li><a target="_blank" href="http://www.quest.dcs.shef.ac.uk/subimdb/SubIMDB_Comedy_Compiled.tar.gz">Comedy Movies and Series<a></li>
+						<li><a target="_blank" href="http://www.quest.dcs.shef.ac.uk/subimdb/SubIMDB_Movies_Compiled.tar.gz">Movies<a></li>
+						<li><a target="_blank" href="http://www.quest.dcs.shef.ac.uk/subimdb/SubIMDB_Series_Compiled.tar.gz">Series<a></li>
 						<li><a target="_blank" href="http://www.quest.dcs.shef.ac.uk/subimdb/SubIMDB_All_Compiled.tar.gz">All<a></li>
 					</ul>
 				</td>
