Updated LEXenstein documentation

--- a/lexenstein/documentation/toc-everything.html
+++ b/lexenstein/documentation/toc-everything.html
@@ -15,7 +15,8 @@
   <h2 class="toc">All Classes</h2>
     <a target="mainFrame" href="lexenstein.evaluators.GeneratorEvaluator-class.html"
      >lexenstein.evaluators.GeneratorEvaluator</a><br />    <a target="mainFrame" href="lexenstein.evaluators.IdentifierEvaluator-class.html"
-     >lexenstein.evaluators.IdentifierEvaluator</a><br />    <a target="mainFrame" href="lexenstein.evaluators.PipelineEvaluator-class.html"
+     >lexenstein.evaluators.IdentifierEvaluator</a><br />    <a target="mainFrame" href="lexenstein.evaluators.PLUMBErr-class.html"
+     >lexenstein.evaluators.PLUMBErr</a><br />    <a target="mainFrame" href="lexenstein.evaluators.PipelineEvaluator-class.html"
      >lexenstein.evaluators.PipelineEvaluator</a><br />    <a target="mainFrame" href="lexenstein.evaluators.RankerEvaluator-class.html"
      >lexenstein.evaluators.RankerEvaluator</a><br />    <a target="mainFrame" href="lexenstein.evaluators.SelectorEvaluator-class.html"
      >lexenstein.evaluators.SelectorEvaluator</a><br />    <a target="mainFrame" href="lexenstein.features.FeatureEstimator-class.html"
@@ -40,11 +41,12 @@
      >lexenstein.rankers.MetricRanker</a><br />    <a target="mainFrame" href="lexenstein.rankers.SVMBoundaryRanker-class.html"
      >lexenstein.rankers.SVMBoundaryRanker</a><br />    <a target="mainFrame" href="lexenstein.rankers.SVMRanker-class.html"
      >lexenstein.rankers.SVMRanker</a><br />    <a target="mainFrame" href="lexenstein.rankers.YamamotoRanker-class.html"
-     >lexenstein.rankers.YamamotoRanker</a><br />    <a target="mainFrame" href="lexenstein.selectors.BelderSelector-class.html"
+     >lexenstein.rankers.YamamotoRanker</a><br />    <a target="mainFrame" href="lexenstein.selectors.AluisioSelector-class.html"
+     >lexenstein.selectors.AluisioSelector</a><br />    <a target="mainFrame" href="lexenstein.selectors.BelderSelector-class.html"
      >lexenstein.selectors.BelderSelector</a><br />    <a target="mainFrame" href="lexenstein.selectors.BiranSelector-class.html"
      >lexenstein.selectors.BiranSelector</a><br />    <a target="mainFrame" href="lexenstein.selectors.BoundarySelector-class.html"
-     >lexenstein.selectors.BoundarySelector</a><br />    <a target="mainFrame" href="lexenstein.selectors.NunesSelector-class.html"
-     >lexenstein.selectors.NunesSelector</a><br />    <a target="mainFrame" href="lexenstein.selectors.SVMBoundarySelector-class.html"
+     >lexenstein.selectors.BoundarySelector</a><br />    <a target="mainFrame" href="lexenstein.selectors.POSProbSelector-class.html"
+     >lexenstein.selectors.POSProbSelector</a><br />    <a target="mainFrame" href="lexenstein.selectors.SVMBoundarySelector-class.html"
      >lexenstein.selectors.SVMBoundarySelector</a><br />    <a target="mainFrame" href="lexenstein.selectors.SVMRankSelector-class.html"
      >lexenstein.selectors.SVMRankSelector</a><br />    <a target="mainFrame" href="lexenstein.selectors.VoidSelector-class.html"
      >lexenstein.selectors.VoidSelector</a><br />    <a target="mainFrame" href="lexenstein.selectors.WSDSelector-class.html"
