--- a/lexenstein/documentation/toc-lexenstein.evaluators-module.html
+++ b/lexenstein/documentation/toc-lexenstein.evaluators-module.html
@@ -15,7 +15,8 @@
   <h2 class="toc">Classes</h2>
     <a target="mainFrame" href="lexenstein.evaluators.GeneratorEvaluator-class.html"
      >GeneratorEvaluator</a><br />    <a target="mainFrame" href="lexenstein.evaluators.IdentifierEvaluator-class.html"
-     >IdentifierEvaluator</a><br />    <a target="mainFrame" href="lexenstein.evaluators.PipelineEvaluator-class.html"
+     >IdentifierEvaluator</a><br />    <a target="mainFrame" href="lexenstein.evaluators.PLUMBErr-class.html"
+     >PLUMBErr</a><br />    <a target="mainFrame" href="lexenstein.evaluators.PipelineEvaluator-class.html"
      >PipelineEvaluator</a><br />    <a target="mainFrame" href="lexenstein.evaluators.RankerEvaluator-class.html"
      >RankerEvaluator</a><br />    <a target="mainFrame" href="lexenstein.evaluators.SelectorEvaluator-class.html"
      >SelectorEvaluator</a><br />  <h2 class="toc">Variables</h2>
