--- a/lexenstein/documentation/toc-lexenstein.selectors-module.html
+++ b/lexenstein/documentation/toc-lexenstein.selectors-module.html
@@ -13,11 +13,12 @@
 <h1 class="toc">Module selectors</h1>
 <hr />
   <h2 class="toc">Classes</h2>
-    <a target="mainFrame" href="lexenstein.selectors.BelderSelector-class.html"
+    <a target="mainFrame" href="lexenstein.selectors.AluisioSelector-class.html"
+     >AluisioSelector</a><br />    <a target="mainFrame" href="lexenstein.selectors.BelderSelector-class.html"
      >BelderSelector</a><br />    <a target="mainFrame" href="lexenstein.selectors.BiranSelector-class.html"
      >BiranSelector</a><br />    <a target="mainFrame" href="lexenstein.selectors.BoundarySelector-class.html"
-     >BoundarySelector</a><br />    <a target="mainFrame" href="lexenstein.selectors.NunesSelector-class.html"
-     >NunesSelector</a><br />    <a target="mainFrame" href="lexenstein.selectors.SVMBoundarySelector-class.html"
+     >BoundarySelector</a><br />    <a target="mainFrame" href="lexenstein.selectors.POSProbSelector-class.html"
+     >POSProbSelector</a><br />    <a target="mainFrame" href="lexenstein.selectors.SVMBoundarySelector-class.html"
      >SVMBoundarySelector</a><br />    <a target="mainFrame" href="lexenstein.selectors.SVMRankSelector-class.html"
      >SVMRankSelector</a><br />    <a target="mainFrame" href="lexenstein.selectors.VoidSelector-class.html"
      >VoidSelector</a><br />    <a target="mainFrame" href="lexenstein.selectors.WSDSelector-class.html"
