Updated subimdb page title

--- a/subimdb/index.html
+++ b/subimdb/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+		<title>SubIMDB: A Structured Corpus of Subtitles</title>
 		<script>
 			function paintHTML(page) {
 				document.getElementById("mainframeid").src=page;
