--- a/subimdb/license.html
+++ b/subimdb/license.html
@@ -1,7 +1,7 @@
 <html>
     <body>
 		<div style="padding-left: 20px;font-family: 'Lucida Console', Monaco, monospace">
-			<br>Neither we, nor any of the content herein, are in any associated with <a target="_blank" href="http://www.imdb.com/"><b>IMDb</b></a>.</br>
+			<br>Neither we, nor any of the content herein, is in any way or form associated with <a target="_blank" href="http://www.imdb.com/"><b>IMDb</b></a>.</br>
 			<br>For subtitle use license, please refer to Open Subtitle's <a target="_blank" href="http://www.opensubtitles.org/en/disclaimer"><b>terms of use</b></a>.</br>
 		</div>
     </body>
