Updated SubIMDB page

--- a/subimdb/contact.html
+++ b/subimdb/contact.html
@@ -1,7 +1,7 @@
 <html>
     <body>
 		<div style="padding-left: 20px;font-family: 'Lucida Console', Monaco, monospace">
-			<br>For questions and queries, you can contact <a target="_blank" href="https://gustavopaetzold.wordpress.com"><b>Gustavo H. Paetzold</b></a>.</br>
+			<br>For questions and queries, you can contact <a target="_blank" href="https://gustavopaetzold.wordpress.com"><b>Gustavo Henrique Paetzold</b></a>.</br>
 		</div>
     </body>
 </html>
