--- a/subimdb/about.html
+++ b/subimdb/about.html
@@ -1,15 +1,14 @@
 <html>
     <body>
 		<div style="padding-left: 20px;font-family: 'Lucida Console', Monaco, monospace">
-			<br><b>SubIMDB</b> is the largest structured corpus of subtitles available online.</br>
+			<br><b>SubIMDB</b> is a structured corpus of subtitles that captures everyday language.</br>
 			<br>It includes over <b>38,000</b> subtitles extracted with the help of <a target="_blank" href="http://www.opensubtitles.org">OpenSubtitles</a> and <a target="_blank" href="http://www.imdb.com/">IMDb</a>.</br>
 			<br>It contains over <b>150,000,000</b> words, which is more than three times the size of <a target="_blank" href="http://www.ugent.be/pp/experimentele-psychologie/en/research/documents/subtlexus/overview.htm">SUBTLEXus</a>.</br>
 			<br>It has been used in state-of-the-art solutions to various tasks, such as:</br>
 			<ul>
-				<li><a target="_blank" href="http://www.aclweb.org/anthology/N15-2002">Synonym Ranking<a></li>
-				<li><a target="_blank" href="http://www.aclweb.org/anthology/N15-2002">Lexical Simplification<a></li>
-				<li><a target="_blank" href="http://www.aclweb.org/anthology/N15-2002">Psycholinguistic Inference<a></li>
-				<li><a target="_blank" href="http://www.aclweb.org/anthology/N15-2002">Complex Word Identification<a></li>
+				<li>Lexical Simplification</li>
+				<li>Psycholinguistic Inference</li>
+				<li>Complex Word Identification</li>
 			</ul>
 		</div>
     </body>
