--- a/subimdb/about.html
+++ b/subimdb/about.html
@@ -2,8 +2,8 @@
     <body>
 		<div style="padding-left: 20px;font-family: 'Lucida Console', Monaco, monospace">
 			<br><b>SubIMDB</b> is a structured corpus of subtitles that captures everyday language.</br>
-			<br>It includes over <b>38,000</b> subtitles extracted with the help of <a target="_blank" href="http://www.opensubtitles.org">OpenSubtitles</a> and <a target="_blank" href="http://www.imdb.com/">IMDb</a>.</br>
-			<br>It contains over <b>228,000,000</b> words, which is more than three times the size of <a target="_blank" href="http://www.ugent.be/pp/experimentele-psychologie/en/research/documents/subtlexus/overview.htm">SUBTLEXus</a>.</br>
+			<br>It includes <b>38,274</b> subtitles extracted with the help of <a target="_blank" href="http://www.opensubtitles.org">OpenSubtitles</a> and <a target="_blank" href="http://www.imdb.com/">IMDb</a>.</br>
+			<br>It contains <b>228,622,257</b> words in <b>39,050,417</b> lines.</br>
 			<br>It has been used in state-of-the-art solutions to various tasks, such as:</br>
 			<ul>
 				<li>Lexical Simplification</li>
