--- a/subimdb/cite.html
+++ b/subimdb/cite.html
@@ -5,7 +5,7 @@
 			<p></p>
 		</div>
 		<div style="padding-left: 20px;font-family: 'Times New Roman', Times, serif">
-			Unsupervised Lexical Simplification for Non-Native Speakers. Proceedings of the 30th AAAI. 2016. [<a target="_blank" href="http://www.aaai.org/ocs/index.php/AAAI/AAAI16/paper/view/12235"><b>link</b></a>][<a target="_blank" href="http://ghpaetzold.github.io/bib/AAAI_2016_Unsupervised_Lexical_Simplification.bib"><b>bib</b></a>]
+			Collecting and Exploring Everyday Language for Predicting Psycholinguistic Properties of Words. Proceedings of the 26th COLING. 2016. [<a target="_blank" href="https://aclweb.org/anthology/C/C16/C16-1157.pdf"><b>link</b></a>][<a target="_blank" href="https://aclweb.org/anthology/C/C16/C16-1157.bib"><b>bib</b></a>]
 			<!--<th><a target="_blank" href="http://www.opensubtitles.org/en/disclaimer"><b>link</b></a></th>-->
 			<!--<th><a target="_blank" href="http://www.opensubtitles.org/en/disclaimer"><b>bib</b></a></th>-->
 		</div>
