Updated massalign docs

--- a/massalign_docs/genindex.html
+++ b/massalign_docs/genindex.html
@@ -72,18 +72,14 @@
         <li><a href="massalign.html#massalign.aligners.VicinityDrivenParagraphAligner.alignParagraphsFromDocuments">(massalign.aligners.VicinityDrivenParagraphAligner method)</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="massalign.html#massalign.aligners.SentenceAligner.alignSentencesFromParagraphs">alignSentencesFromParagraphs() (massalign.aligners.SentenceAligner method)</a>
 
       <ul>
         <li><a href="massalign.html#massalign.aligners.VicinityDrivenSentenceAligner.alignSentencesFromParagraphs">(massalign.aligners.VicinityDrivenSentenceAligner method)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="massalign.html#massalign.annotators.SentenceAnnotator.annotate_file">annotate_file() (massalign.annotators.SentenceAnnotator method)</a>
-</li>
-      <li><a href="massalign.html#massalign.annotators.SentenceAnnotator.annotate_sentence">annotate_sentence() (massalign.annotators.SentenceAnnotator method)</a>
-</li>
   </ul></td>
 </tr></table>
 
@@ -104,7 +100,7 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="massalign.html#massalign.gui.ControlFrame">ControlFrame (class in massalign.gui)</a>
 </li>
-      <li><a href="massalign.html#massalign.annotators.SentenceAnnotator.create_conll_files">create_conll_files() (massalign.annotators.SentenceAnnotator method)</a>
+      <li><a href="massalign.html#massalign.annotators.SentenceAnnotator.createConllFiles">createConllFiles() (massalign.annotators.SentenceAnnotator method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -112,8 +108,6 @@
 <h2 id="D">D</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="massalign.html#massalign.annotators.SentenceAnnotator.dict2conll">dict2conll() (massalign.annotators.SentenceAnnotator method)</a>
-</li>
       <li><a href="massalign.html#massalign.gui.DisplayFrame">DisplayFrame (class in massalign.gui)</a>
 </li>
       <li><a href="massalign.html#massalign.gui.BasicGUI.displayListOfParagraphAlignments">displayListOfParagraphAlignments() (massalign.gui.BasicGUI method)</a>
@@ -204,15 +198,21 @@
 </li>
       <li><a href="massalign.html#massalign.aligners.VicinityDrivenSentenceAligner.getProbabilityMatrix">getProbabilityMatrix() (massalign.aligners.VicinityDrivenSentenceAligner method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="massalign.html#massalign.util.FileReader.getRawText">getRawText() (massalign.util.FileReader method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="massalign.html#massalign.aligners.VicinityDrivenSentenceAligner.getSentenceAlignmentPath">getSentenceAlignmentPath() (massalign.aligners.VicinityDrivenSentenceAligner method)</a>
 </li>
       <li><a href="massalign.html#massalign.core.MASSAligner.getSentenceAlignments">getSentenceAlignments() (massalign.core.MASSAligner method)</a>
 </li>
-      <li><a href="massalign.html#massalign.core.MASSAligner.getSentenceAnnotations">getSentenceAnnotations() (massalign.core.MASSAligner method)</a>
+      <li><a href="massalign.html#massalign.annotators.SentenceAnnotator.getSentenceAnnotations">getSentenceAnnotations() (massalign.annotators.SentenceAnnotator method)</a>
+
+      <ul>
+        <li><a href="massalign.html#massalign.core.MASSAligner.getSentenceAnnotations">(massalign.core.MASSAligner method)</a>
+</li>
+      </ul></li>
+      <li><a href="massalign.html#massalign.annotators.SentenceAnnotator.getSentenceAnnotationsForFile">getSentenceAnnotationsForFile() (massalign.annotators.SentenceAnnotator method)</a>
 </li>
       <li><a href="massalign.html#massalign.models.TFIDFModel.getSentencesFromParagraph">getSentencesFromParagraph() (massalign.models.TFIDFModel method)</a>
 </li>
