Fixed adpative ranking experiment page

--- a/AdaptiveRankingExperiment.html
+++ b/AdaptiveRankingExperiment.html
@@ -13,7 +13,7 @@
 		<li>Click the "<strong>Start!</strong>" button below to begin.</li>
 		<li>If your native language is not listed, please select the "<strong>Other</strong>" option at the end of the list.</li>
 		<li>Each sentence will have a <strong>highlighted complex word</strong> and various <strong>replacements</strong> for it.</li>
-		<li>Rank the replacements in <strong>decreasing order of simplicity</strong> (simplest to most complex).</li>
+		<li>Rank the replacements in <strong>decreasing order of simplicity</strong> (simplest=1 to most complex).</li>
 		<li>Here are some examples:</li>
 		<img src="https://gustavopaetzold.files.wordpress.com/2017/12/examples_sr_adaptive.png" align="middle"></img>
 		<li>Once finished, click the "<strong>Done</strong>" button at the bottom of the page.</li>
