--- a/utfpr/computacao.html
+++ b/utfpr/computacao.html
@@ -8,6 +8,8 @@
 <ul>
   <li><a href=https://docs.google.com/presentation/d/1LfpSKZvZrke7jr9goG0dRDL79z3TA8yn6IDAmQn8Ogc/edit?usp=sharing>Aula 1 - Apresentação da Disciplina</a></li>
   <li><a href=https://docs.google.com/presentation/d/11Ep6zXqeCU1pUSuSxsi68Ec4YzzSuWbkLW9zKoWW9aU/edit?usp=sharing>Aula 2 - Conceitos Iniciais</a></li>
+  <li><a href=https://docs.google.com/presentation/d/11Wvp8zp5751cgBVS9qKuXwuYIEncYXRLXZGsSTfeU4Y/edit?usp=sharing>Aula 3 - Expressões Lógicas (Parte 1)</a></li>
+  <li><a href=https://docs.google.com/presentation/d/1YPdKHHwJcv2c7ENa92ZnIGAxB91RIhiIKr5E84gGRl0/edit?usp=sharing>Aula 4 - Expressões Lógicas (Parte 2)</a></li>
 </ul>
 
 <h3>Arquivos Importantes</h3>
