--- a/utfpr/md.html
+++ b/utfpr/md.html
@@ -8,6 +8,8 @@
 <ul>
   <li><a href=https://docs.google.com/presentation/d/1ci0lHwbrKTXGSnXGLAFTI367yLPT7pJT5e4lXLUQZZ0/edit?usp=sharing>Aula 1 - Apresentação da Disciplina</a></li>
   <li><a href=https://docs.google.com/presentation/d/1Vb1qi4djCcyeijNbJM1KAk8Kr1qM_5SN-a508xSranw/edit?usp=sharing>Aula 2 - Introdução à Matemática Discreta</a></li>
+  <li><a href=https://docs.google.com/presentation/d/15dg1jHQ4OTPvKCvADLESSjgn4HS8_cXAmt6UKWn7J5o/edit?usp=sharing>Aula 3 - Introdução à Lógica Proposicional</a></li>
+  <li><a href=https://docs.google.com/presentation/d/1m_fRi2wtyKEEv1xpUwrGoYqcnxil6uv_b5BEI-lxUHk/edit?usp=sharing>Aula 4 - Sintaxe e Semântica da Lógica Proposicional</a></li>
 </ul>
 
 <h3>Arquivos Importantes</h3>
